[gd_scene load_steps=6 format=3 uid="uid://cmbrxrx3dglb2"]

[ext_resource type="Script" path="res://scene/enemy/base_enemy.gd" id="1_a24jy"]
[ext_resource type="Texture2D" uid="uid://bruslgw43o0fw" path="res://texture/Without Sword (for gun)/shadow.png" id="1_etj6w"]
[ext_resource type="AudioStream" uid="uid://b3fh88c16ssxd" path="res://audio/physics_body_impact_bullet_1.mp3" id="3_ftjyc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rx6hm"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v76ol"]
radius = 4.0
height = 14.0

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_a24jy")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-1, -2)
texture = ExtResource("1_etj6w")

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Body"]
unique_name_in_owner = true
z_index = 1
position = Vector2(12, -10)
sprite_frames = SubResource("SpriteFrames_rx6hm")
animation = &"idle"

[node name="HurtArea" type="Area2D" parent="Body"]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 8

[node name="AtkArea" type="Area2D" parent="Body"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -7)
shape = SubResource("CapsuleShape2D_v76ol")

[node name="AtkTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ftjyc")
volume_db = -15.0
max_distance = 600.0
max_polyphony = 10

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 8.0
neighbor_distance = 200.0
max_speed = 0.01

[connection signal="timeout" from="AtkTimer" to="." method="_on_atk_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
